708455313/1.3/Readme.md
Blueprints allow the quick construction of repetitive rooms/areas.

![Features](https://banners.karel-kroeze.nl/title/Features.png)  
**Create blueprint**
Use the 'Create' designator to drag over an area with existing constructions. Floors, walls and furniture will all be designated, and included in the blueprint. once created, a popup will appear with a default name, giving you the option to set a more meaningful name.

_NOTE: Only constructions owned by you will be included, use the 'Claim' order if necessary._

**Place blueprint**
Once you've created a blueprint, you can use the new button to place copies of that blueprint. Blueprints can be rotated as normal. With a blueprint selected, you'll see an outline of what will be build on the main view, and a list of items and total cost in the lower left info panel. In this panel, you can click on furniture and walls made of stuff to change what stuff should be used in their construction.

_NOTE: You can shift-click with a designator selected to use the planning mode. In this case, any walls in the blueprint will be used to create a plan for your future rooms. This might be useful for mining out the required space._

**Rename, import & export blueprints**
Once you've created a blueprint, you can right click the blueprint button to rename, remove or export the blueprint. Exported blueprints will be saved in the same location as RimWorlds save games and config files, in a directory called "Blueprints". If a blueprint has been exported, an option to remove and delete the exported blueprint will also appear.
You can import previously exported blueprints by right clicking the 'Create' button, and selecting the blueprint from the list of available blueprints.

_NOTE: While you can import/export blueprints between games, be careful with doing so when a blueprint contains (modded) items that are not available in the current game. If you import a blueprint containing items that are unavailable, an error will pop up, and the offending item will be deleted from the blueprint. I've tried to make sure the rest of the blueprint is still usable, but your results may vary._

![Contributors](https://banners.karel-kroeze.nl/title/Contributors.png)  
- Proxyer
    - [Update Japanese Translation for v2.15.128 (#30)](https://github.com/fluffy-mods/Blueprints/commit/048e1da)
    - [Update Japanese Translation on 8 Mar, 2020 (#25)](https://github.com/fluffy-mods/Blueprints/commit/0eb2fbe)
    - [Update Japanese Translation for v2.5.95 (#18)](https://github.com/fluffy-mods/Blueprints/commit/8d7959c)
- Seo. Junmin
    - [Add Korean translations (#16)](https://github.com/fluffy-mods/Blueprints/commit/7088117)
- Kirill
    - [Fix translation (#13)](https://github.com/fluffy-mods/Blueprints/commit/92b6bf7)
- Butter-Knife
    - [Update Japanese translation. (#10)](https://github.com/fluffy-mods/Blueprints/commit/570995e)
    - [Added Japanese translation (#8)](https://github.com/fluffy-mods/Blueprints/commit/4491db6)
- 53N4
    - [Spanish Translation (#9)](https://github.com/fluffy-mods/Blueprints/commit/006783f)
- duduluu
    - [Update Chinese translations](https://github.com/fluffy-mods/Blueprints/commit/0f8f4e9)
    - [Update Chinese translations (#4)](https://github.com/fluffy-mods/Blueprints/commit/07b3314)
    - [Add Chinese Translation (#1)](https://github.com/fluffy-mods/Blueprints/commit/febb39f)
- Bronytamin
    - [Russian translation (#5)](https://github.com/fluffy-mods/Blueprints/commit/514ed78)


![Think you found a bug?](https://banners.karel-kroeze.nl/title/Think%20you%20found%20a%20bug%3F.png)  

Please read [this guide](http://steamcommunity.com/sharedfiles/filedetails/?id=725234314) before creating a bug report,
and then create a bug report [here](https://github.com/fluffy-mods/Blueprints/issues)

![Older versions](https://banners.karel-kroeze.nl/title/Older%20versions.png)  

All current and past versions of this mod can be downloaded from [GitHub](https://github.com/fluffy-mods/Blueprints/releases).

![License](https://banners.karel-kroeze.nl/title/License.png)  

All original code in this mod is licensed under the [MIT license](https://opensource.org/licenses/MIT). Do what you want, but give me credit.
All original content (e.g. text, imagery, sounds) in this mod is licensed under the [CC-BY-SA 4.0 license](http://creativecommons.org/licenses/by-sa/4.0/).

Parts of the code in this mod, and some of the content may be licensed by their original authors. If this is the case, the original author & license will either be given in the source code, or be in a LICENSE file next to the content. Please do not decompile my mods, but use the original source code available on [GitHub](https://github.com/fluffy-mods/Blueprints/), so license information in the source code is preserved.

Parts of this mod were created by, or derived from works created by;
- Nikita Golubev/Flaticon.com: preview blueprint image ([BY-NC](https://www.flaticon.com/authors/nikita-golubev))


![Are you enjoying my mods?](https://banners.karel-kroeze.nl/title/Are%20you%20enjoying%20my%20mods%3F.png)  

Become a supporter and show your appreciation by buying me a coffee (or contribute towards a nice single malt).

[![Supporters](https://banners.karel-kroeze.nl/donations.png)](https://ko-fi.com/fluffymods)

[![Buy Me a Coffee](https://i.imgur.com/6P7Ap79.gif)](https://ko-fi.com/fluffymods)

[![I Have a Black Dog](https://i.ibb.co/ss59Rwy/New-Project-2.png)](https://www.youtube.com/watch?v=XiCrniLQGYc)
